--- a/src/app/pages/projects/projects/projects.component.html
+++ b/src/app/pages/projects/projects/projects.component.html
@@ -16,58 +16,61 @@
       </div>
 
       <div class="mat-elevation-z8 overflow-auto mb-10">
-        <ng-container *ngIf="projects | async as projectList; else loading">
-          <ng-container *ngIf="projectList.length > 0; else noProjects">
-            <table mat-table [dataSource]="dataSource" matSort>
+        <ng-container *ngIf="dataSource; else loading">
+          <ng-container *ngIf="projects | async as projectList; else loading">
+            <ng-container *ngIf="projectList.length > 0 else noProjects">
+          <!-- <ng-container *ngIf="projectList.length > 0; else noProjects"> -->
+              <table mat-table [dataSource]="dataSource" matSort>
 
-              <!-- Color Column -->
-              <ng-container matColumnDef="colorCode">
-                <th class="w-1" mat-header-cell *matHeaderCellDef></th>
-                <td class="w-1" mat-cell *matCellDef="let row"> 
-                  <div class="w-5 h-5 rounded" [style.backgroundColor]="row.colorCode"></div>
-                </td>
-              </ng-container>
+                <!-- Color Column -->
+                <ng-container matColumnDef="colorCode">
+                  <th class="w-1" mat-header-cell *matHeaderCellDef></th>
+                  <td class="w-1" mat-cell *matCellDef="let row"> 
+                    <div class="w-5 h-5 rounded" [style.backgroundColor]="row.colorCode"></div>
+                  </td>
+                </ng-container>
 
-              <!-- Title Column -->
-              <ng-container matColumnDef="title">
-                <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Nazwa </th>
-                <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.title}} </td>
-              </ng-container>
+                <!-- Title Column -->
+                <ng-container matColumnDef="title">
+                  <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Nazwa </th>
+                  <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.title}} </td>
+                </ng-container>
 
-              <!-- Key Column -->
-              <ng-container matColumnDef="key">
-                <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Skrót </th>
-                <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.key}} </td>
-              </ng-container>
+                <!-- Key Column -->
+                <ng-container matColumnDef="key">
+                  <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Skrót </th>
+                  <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.key}} </td>
+                </ng-container>
 
-              <!-- Owner Column -->
-              <ng-container matColumnDef="owner">
-                <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Właściciel </th>
-                <td class="w-1/3" mat-cell *matCellDef="let row">
-                  <app-user-info [userId]="row.owner"></app-user-info>
-                </td>
-              </ng-container>
-              
-               <!-- Menu button Column -->
-              <ng-container matColumnDef="actions">
-                <th class="w-1" mat-header-cell *matHeaderCellDef></th>
-                <td class="w-1" mat-cell *matCellDef="let row">
-                  <button mat-icon-button color="primary" [matMenuTriggerFor]="menu" aria-label="Menu" (click)="$event.stopPropagation(); selectedRowForMenu = row">
-                    <mat-icon>menu</mat-icon>
-                  </button>
-                </td>
-              </ng-container>
+                <!-- Owner Column -->
+                <ng-container matColumnDef="owner">
+                  <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Właściciel </th>
+                  <td class="w-1/3" mat-cell *matCellDef="let row">
+                    <app-user-info [userId]="row.owner"></app-user-info>
+                  </td>
+                </ng-container>
+                
+                <!-- Menu button Column -->
+                <ng-container matColumnDef="actions">
+                  <th class="w-1" mat-header-cell *matHeaderCellDef></th>
+                  <td class="w-1" mat-cell *matCellDef="let row">
+                    <button mat-icon-button color="primary" [matMenuTriggerFor]="menu" aria-label="Menu" (click)="$event.stopPropagation(); selectedRowForMenu = row">
+                      <mat-icon>menu</mat-icon>
+                    </button>
+                  </td>
+                </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" (click)="goToProjectTasks(row.id)"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" (click)="goToProjectTasks(row.id)"></tr>
 
-              <!-- Row shown when there is no matching data. -->
-              <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">Brak projektów pasujących do filtru: "{{input.value}}"</td>
-              </tr>
-            </table>
-            <mat-divider></mat-divider>
-            <mat-paginator [pageSizeOptions]="[12]" showFirstLastButtons="false" aria-label="Select page of projects"></mat-paginator>
+                <!-- Row shown when there is no matching data. -->
+                <tr style="height: 52px; text-align: center;" *matNoDataRow>
+                  <td class="mat-cell" colspan="5">Brak projektów pasujących do filtru: "{{input.value}}"</td>
+                </tr>
+              </table>
+              <mat-divider></mat-divider>
+              <mat-paginator [pageSizeOptions]="[12]" showFirstLastButtons="false" aria-label="Select page of projects"></mat-paginator>
+            </ng-container>
           </ng-container>
         </ng-container>
       </div>
