--- a/src/app/pages/projects/project-edit/project-edit.component.html
+++ b/src/app/pages/projects/project-edit/project-edit.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-center text-base w-full h-full" style="background-color: #f5f5f5">
     <div class="w-2/3 md:w-1/2 xl:w-1/3">
       <mat-card class="p-6">
-        <div class="mb-4">Nowy projekt</div>
+        <div class="mb-4">Edytuj projekt</div>
 
         <form [formGroup]="form" class="w-full">
           <div class="mb-4 flex justify-center">
