--- a/src/app/pages/projects/project-edit/project-edit.component.html
+++ b/src/app/pages/projects/project-edit/project-edit.component.html
@@ -3,8 +3,9 @@
     <div class="w-2/3 md:w-1/2 xl:w-1/3">
       <mat-card class="p-6">
         <div class="mb-4">Edytuj projekt</div>
+        <xng-breadcrumb class="mb-4 text-xs" style="color: #3f51b5;" [separator]="iconTemplate"></xng-breadcrumb>
 
-        <form [formGroup]="form" class="w-full">
+        <form [formGroup]="form" class="w-full" *ngIf="project; else loading">
           <div class="mb-4 flex justify-center">
             <mat-form-field [hideRequiredMarker]="true" class="w-60">
               <mat-label>Wybierz kolor</mat-label>
@@ -40,6 +41,16 @@
   </div>
 </div>
 
+<ng-template #loading>
+  <div class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
+
 <ng-template #noLoading>
   <mat-progress-bar mode="indeterminate" style="border-radius: 50%; height: 30px; visibility: hidden;"></mat-progress-bar>
+</ng-template>
+
+<ng-template #iconTemplate>
+  <mat-icon>chevron_right</mat-icon>
 </ng-template>
