--- a/src/app/pages/projects/project-new/project-new.component.html
+++ b/src/app/pages/projects/project-new/project-new.component.html
@@ -3,6 +3,7 @@
     <div class="w-2/3 md:w-1/2 xl:w-1/3">
       <mat-card class="p-6">
         <div class="mb-4">Nowy projekt</div>
+        <xng-breadcrumb class="mb-4 text-xs" style="color: #3f51b5;" [separator]="iconTemplate"></xng-breadcrumb>
 
         <form [formGroup]="form" class="w-full">
           <div class="mb-4 flex justify-center">
@@ -42,4 +43,8 @@
 
 <ng-template #noLoading>
   <mat-progress-bar mode="indeterminate" style="border-radius: 50%; height: 30px; visibility: hidden;"></mat-progress-bar>
+</ng-template>
+
+<ng-template #iconTemplate>
+  <mat-icon>chevron_right</mat-icon>
 </ng-template>
