--- a/src/app/pages/tasks/task-list/task-list.component.css
+++ b/src/app/pages/tasks/task-list/task-list.component.css
@@ -1,11 +1,3 @@
-/* mat-toolbar {
-  margin-bottom: 20px;
-}
-
-mat-toolbar > span {
-  margin-left: 10px;
-} */
-
 .list {
   min-height: 134px;
   max-height: calc(100vh - 280px);
@@ -14,12 +6,6 @@ mat-toolbar > span {
   overflow-y: auto;
 }
 
-/* app-new-task {
-  margin-bottom: 30px;
-}
-
-*/
-
 .empty-label {
   font-size: 2em;
   padding-top: 10px;
@@ -27,10 +13,18 @@ mat-toolbar > span {
   opacity: 0.2;
 }
 
-.cdk-drag-animating {
-  transition: transform 250ms;
-}
-
 .cdk-drag-placeholder {
   opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 134px;
+  background-color: white;
 }
