--- a/src/app/pages/tasks/task-list/task-list.component.html
+++ b/src/app/pages/tasks/task-list/task-list.component.html
@@ -1,16 +1,14 @@
 <div class="absolute top-16 w-full" style="height: calc(100% - 64px); background-color: #f5f5f5;">
   <div class="flex justify-center text-base w-full" style="background-color: #f5f5f5; height: full">
-    <div class="w-3/4 mt-4">
-      <div class="flex sm:items-baseline sm:justify-between sm:flex-row items-center flex-col-reverse">
-        <mat-form-field>
-          <input matInput placeholder="Filtruj zadania..." #input>
-        </mat-form-field>
+    <div class="w-3/4" style="margin-top: 27px;">
+      <div class="flex sm:items-baseline sm:justify-between sm:flex-row items-center flex-col">
+        <xng-breadcrumb class="mb-4 text-xs" style="color: #3f51b5;" [separator]="iconTemplate"></xng-breadcrumb>
         <button class="mb-4 w-44" mat-raised-button color="primary" (click)="newTask()" mat-button>
           Nowe zadanie
         </button>
       </div>
 
-      <div class="flex justify-between">
+      <div class="flex justify-between text-center">
         <div style="width: 30%;">
           <h2>Do zrobienia</h2>
 
@@ -22,10 +20,12 @@
             [cdkDropListConnectedTo]="[doneList, inProgressList]"
             (cdkDropListDropped)="drop($event)"
             class="list">
-            <div *ngIf="(todo | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
-              <p class="empty-label">Brak zadań</p>
+            <div *ngIf="!loadingTodo; else loading">
+              <div *ngIf="(todo | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
+                <p class="empty-label">Brak zadań</p>
+              </div>
+              <app-task (edit)="editTask('todo', $event)" *ngFor="let task of todo | async" cdkDrag [task]="task"></app-task>
             </div>
-            <app-task (edit)="editTask('todo', $event)" *ngFor="let task of todo | async" cdkDrag [task]="task"></app-task>
           </mat-card>
         </div>
 
@@ -40,10 +40,12 @@
             [cdkDropListConnectedTo]="[todoList, doneList]"
             (cdkDropListDropped)="drop($event)"
             class="list">
-            <div *ngIf="(inProgress | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
-              <p class="empty-label">Brak zadań</p>
+            <div *ngIf="!loadingInProgress; else loading">
+              <div *ngIf="(inProgress | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
+                <p class="empty-label">Brak zadań</p>
+              </div>
+              <app-task (edit)="editTask('inProgress', $event)" *ngFor="let task of inProgress | async" cdkDrag [task]="task"></app-task>
             </div>
-            <app-task (edit)="editTask('inProgress', $event)" *ngFor="let task of inProgress | async" cdkDrag [task]="task"></app-task>
           </mat-card>
         </div>
 
@@ -58,13 +60,25 @@
             [cdkDropListConnectedTo]="[todoList, inProgressList]"
             (cdkDropListDropped)="drop($event)"
             class="list">
-            <div *ngIf="(done | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
-              <p class="empty-label">Brak zadań</p>
+            <div *ngIf="!loadingInProgress; else loading">
+              <div *ngIf="(done | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
+                <p class="empty-label">Brak zadań</p>
+              </div>
+              <app-task (edit)="editTask('done', $event)" *ngFor="let task of done | async" cdkDrag [task]="task"></app-task>
             </div>
-            <app-task (edit)="editTask('done', $event)" *ngFor="let task of done | async" cdkDrag [task]="task"></app-task>
           </mat-card>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
+
+<ng-template #iconTemplate>
+  <mat-icon>chevron_right</mat-icon>
+</ng-template>
