--- a/src/app/pages/tasks/task/task.component.html
+++ b/src/app/pages/tasks/task/task.component.html
@@ -1,4 +1,5 @@
 <mat-card class="item" *ngIf="task" (dblclick)="edit.emit(task)">
   <h2>{{ task.title }}</h2>
   <p>{{ task.description }}</p>
+  <p>Utworzone: {{ task.dateCreated | dateFormat }}</p>
 </mat-card>
